<resources>
    <string name="app_name">Event Hub</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_signup">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="transition_event_image">transition_event_image</string>

    <string name="bookmark">bookmark</string>
    <string name="confirm">confirm</string>

    <!-- fields saved in shared pref. -->
    <string name="prefs_name">event_hub_preferences</string>
    <string name="current_user_key">current_user_key</string>

    <string name="google_maps_key">AIzaSyAO8TwBxmR_nLl8HeZh8FmExTaVyWU-DiI</string>
    <string name="banner_ad_unit_id">ca-app-pub-4483146477964144/1337930153</string>

    <!-- bottom nav -->
    <string name="nav_home">Home</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_me">Me</string>

    <!-- profile fragment -->
    <string name="name">Name</string>
    <string name="email">Email</string>

    <!-- my events fragment -->
    <string name="all">All</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="confirmed">Confirmed</string>
    <string name="organized">Organized</string>

    <string name="desc_add_event">Add new event</string>

    <string name="title">Title</string>
    <string name="detail">Detail</string>
    <string name="time_from">Time from</string>
    <string name="time_to">Time to</string>
    <string name="location">Location</string>
    <string name="image_url">Image URL</string>
    <string name="post">Post</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

    <!--<string name="api_url">http://10.0.2.2:3000</string>-->
    <string name="api_url">http://www.bookasap.com/eventhub</string>

    <string name="desc_event_image">event image</string>
    <string name="desc_event_start_time">event start time</string>
    <string name="desc_event_end_time">event end time</string>
    <string name="desc_refresh">refresh</string>
    <string name="desc_event_main_image">event main image</string>
    <string name="desc_thumbnail_image">event thumbnail image</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>

    <string name="event_actioned">Event %1$sed.</string>
    <string name="event_saved">Event saved.</string>
    <string name="list_of_all_events">list of all events</string>
    <string name="value_is_required">%1$s is required.</string>
    <string name="next_line">\n</string>
    <string name="design_test_error_message">error message for invalid user input.</string>
    <string name="no_events_found">No events found, add some first.</string>
</resources>
