<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dorren.eventhub.ui.myevent.MyEventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/myevents_bookmarked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmarked"
            />

        <Button
            android:id="@+id/myevents_confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmed" />

        <Button
            android:id="@+id/myevents_organized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organized" />
    </LinearLayout>
</FrameLayout>
