<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.dorren.eventhub.ui.newevent.NewEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/page_end_margin">

        <TextView
            android:id="@+id/error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:visibility="invisible"
            tools:text="error message for invalid user input."
            />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"/>

        <EditText
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:inputType="textMultiLine"
            android:hint="@string/detail"
            android:gravity="top"/>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TableRow android:gravity="center_vertical">
                <TextView
                    android:id="@+id/time_from_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_from"/>

                <TextView
                    android:id="@+id/time_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin" />

                <ImageButton
                    android:id="@+id/time_from_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calendar"
                    android:text=""
                    android:onClick="openDatePicker"/>

            </TableRow>

            <TableRow android:gravity="center_vertical">
                <TextView
                    android:id="@+id/time_to_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_to"/>

                <TextView
                    android:id="@+id/time_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

                <ImageButton
                    android:id="@+id/time_to_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calendar"
                    android:text=""
                    android:onClick="openDatePicker"/>

            </TableRow>
        </TableLayout>

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post"
                android:onClick="postEvent"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel"
                android:onClick="cancel"/>
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
